--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,22 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.js
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# Build files
+/.next/
+/out/
+/dist/
+/.tsbuildinfo
 
 # testing
 /coverage
+.nyc_output/
 
 # next.js
 /.next/
@@ -20,12 +32,20 @@
 *.pem
 
 # debug
+*.log
+logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# local env files
+# env files (can opt-in for committing if needed)
+.env*
 .env*.local
+.env
+.env.development
+.env.test
+.env.production
 
 # vercel
 .vercel
@@ -33,3 +53,21 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Cache
+.cache/
+.temp/
+
+# IDE/Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+Thumbs.db
+
+# Local development
+*.local
